intTests/test_parse_errors/parser002.log.good
Loading file "parser002.saw"
Error: Parse error at parser002.saw:2:36-2:38: Unexpected `in'
FAILED
