intTests/test_parse_errors/parser002.saw
// "rebindable" is not allowed in let-expressions
let b = do { let rebindable b' = 3 in (); };
